--- a/.github/workflows/action-cf.yaml
+++ b/.github/workflows/action-cf.yaml
@@ -20,7 +20,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-3
+          aws-region: us-east-1
 
       - name: Upload stack to S3
         run: |
