--- a/.github/workflows/action-topic.yaml
+++ b/.github/workflows/action-topic.yaml
@@ -5,7 +5,7 @@ on:
   push:
     paths:
       - 'frontend/**'
-      - '.github/workflows/action-topic1.yaml'
+      - '.github/workflows/action-topic.yaml'
 
 jobs:
   upload:
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@master
       - name: Upload to S3
         run: |
-          aws s3 sync ./frontend s3://s3bucket-${{ github.event.repository.name }}
+          aws s3 sync ./frontend s3://s3bucket-${{ github.event.repository.name }}-root
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
