--- a/.github/workflows/action-cf.yaml
+++ b/.github/workflows/action-cf.yaml
@@ -38,6 +38,6 @@ jobs:
           no-fail-on-empty-changeset: "1"
           disable-rollback: "1"
           parameter-overrides: >-
-            paramRootDomain=lyc-handson-aws.com,
+            paramRootDomain=lyc-handson-devops.fr,
             paramUniqueTagName=yuanchao-handson-tag,
             paramUniqueTagValue=${{ github.event.repository.name }}
